# chi2comb

./: .appveyor.yml  .travis.yml  CMakeLists.txt  GITHUB_URL  NAME  README.md  chi2comb-config.cmake.in  install  install.bat
cmake/: limix.cmake
include/: CMakeLists.txt  chi2comb.h
include/chi2comb/: chi2comb.h
src/: CMakeLists.txt  chi2comb.c
test/: CMakeLists.txt  acutest.h  chi2comb.c
